src/auryn/snapshots/auryn__auryn__ast__tests__expression-3.snap
---
source: src/auryn/ast.rs
expression: "parse(\"1 * 2 + 3\")"
---
Ok(
    Node {
        len: 9,
        kind: Root {
            expression: Ok(
                Node {
                    len: 9,
                    kind: BinaryOperation {
                        lhs: Ok(
                            Node {
                                len: 6,
                                kind: BinaryOperation {
                                    lhs: Ok(
                                        Node {
                                            len: 2,
                                            kind: Value(
                                                Ok(
                                                    Node {
                                                        len: 2,
                                                        kind: Int(
                                                            1,
                                                        ),
                                                    },
                                                ),
                                            ),
                                        },
                                    ),
                                    operator: Ok(
                                        Node {
                                            len: 2,
                                            kind: Times,
                                        },
                                    ),
                                    rhs: Ok(
                                        Node {
                                            len: 2,
                                            kind: Value(
                                                Ok(
                                                    Node {
                                                        len: 2,
                                                        kind: Int(
                                                            2,
                                                        ),
                                                    },
                                                ),
                                            ),
                                        },
                                    ),
                                },
                            },
                        ),
                        operator: Ok(
                            Node {
                                len: 2,
                                kind: Plus,
                            },
                        ),
                        rhs: Ok(
                            Node {
                                len: 1,
                                kind: Value(
                                    Ok(
                                        Node {
                                            len: 1,
                                            kind: Int(
                                                3,
                                            ),
                                        },
                                    ),
                                ),
                            },
                        ),
                    },
                },
            ),
        },
    },
)
