src/auryn/snapshots/auryn__auryn__ast__tests__expression.snap
---
source: src/auryn/ast.rs
expression: "parse(\"1+2\")"
---
Ok(
    Node {
        len: 3,
        kind: Root {
            expression: Ok(
                Node {
                    len: 3,
                    kind: BinaryOperation {
                        lhs: Ok(
                            Node {
                                len: 1,
                                kind: Value(
                                    Ok(
                                        Node {
                                            len: 1,
                                            kind: Int(
                                                1,
                                            ),
                                        },
                                    ),
                                ),
                            },
                        ),
                        operator: Ok(
                            Node {
                                len: 1,
                                kind: Plus,
                            },
                        ),
                        rhs: Ok(
                            Node {
                                len: 1,
                                kind: Value(
                                    Ok(
                                        Node {
                                            len: 1,
                                            kind: Int(
                                                2,
                                            ),
                                        },
                                    ),
                                ),
                            },
                        ),
                    },
                },
            ),
        },
    },
)
