src/auryn/snapshots/auryn__auryn__ast__tests__function_call.snap
---
source: src/auryn/ast.rs
expression: "parse(\"print(1)\")"
---
Ok(
    Node {
        span: Span {
            len: 8,
        },
        kind: Root {
            expression: Ok(
                Node {
                    span: Span {
                        len: 8,
                    },
                    kind: Value(
                        Ok(
                            Node {
                                span: Span {
                                    len: 8,
                                },
                                kind: FunctionCall(
                                    Ok(
                                        Node {
                                            span: Span {
                                                len: 8,
                                            },
                                            kind: FunctionCall {
                                                ident: "print",
                                                arguments: [
                                                    Ok(
                                                        Node {
                                                            span: Span {
                                                                len: 1,
                                                            },
                                                            kind: Value(
                                                                Ok(
                                                                    Node {
                                                                        span: Span {
                                                                            len: 1,
                                                                        },
                                                                        kind: Int(
                                                                            1,
                                                                        ),
                                                                    },
                                                                ),
                                                            ),
                                                        },
                                                    ),
                                                ],
                                            },
                                        },
                                    ),
                                ),
                            },
                        ),
                    ),
                },
            ),
        },
    },
)
